# structCalculator

./: CMakeLists.txt  README.md
include/: mainwindow.h  structCalculator.h
src/: main.cpp  mainwindow.ui  structCalculator.cpp
structCalculator/: CMakeLists.txt
